# pgspa

./: .gitignore  CMakeLists.txt  README.md  pgspa.cpp
cmake/: FindPgfe.cmake  Finddmitigr_pgfe.cmake  dmitigr_package_finder.cmake
dmitigr/pgspa/internal/: CMakeLists.txt  config.cpp  config.hxx  console.cpp  console.hxx  dbg.hxx  debug.hxx  filesystem.cpp  filesystem.hxx  filesystem_experimental.hxx  macros.hxx  math.hxx  os.cpp  os.hxx  simple_config.hxx  stream.cpp  stream.hxx  string.cpp  string.hxx
dmitigr/pgspa/internal/os/: user.hxx
dmitigr/pgspa/internal/std/filesystem/: read_lines_to_vector.hxx  read_to_string.hxx  relative_root_path.hxx
dmitigr/pgspa/internal/std/stream/: read_to_string.hxx
dmitigr/pgspa/internal/std/string/: line.hxx  predicates.hxx  substring.hxx
example/: db.sql
example/roles/: .pgspa  alice.sql  bob.sql  drop.sql  recreate
example/schemas/: create.sql  drop_all.sql  drop_logic.sql  recreate_all  recreate_logic
sql/: CMakeLists.txt  dmitigr_spa--0.1.sql  dmitigr_spa--1.0.sql  dmitigr_spa.control
